--- a/signup-page/style.css
+++ b/signup-page/style.css
@@ -1,6 +1,4 @@
-* {
-  box-sizing: border-box;
-}
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;500;600&display=swap');
 
 :root {
   --font-size-normal: 16px;
@@ -12,25 +10,27 @@
   --color-white: #ffffff;
   --color-green: #2ec4b6;
 
-  --color-border: #a6a6a6;
+  --color-border: #efefef;
+}
+
+* {
+  box-sizing: border-box;
+  font-family: 'Josefin Sans', sans-serif;
+  font-size: var(--font-size-normal);
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
   background-color: var(--color-background);
 }
 
 .container {
   display: flex;
   flex-direction: row;
-  height: 100vh;
   padding: 40px;
-  gap: 40px;
 }
 
 .inner-container {
   flex: 1;
-  /* flex-basis: 0; */
 }
 
 .flex-center {
@@ -46,26 +46,49 @@ body {
   object-fit: cover;
 }
 
+.info-container {
+  max-width: 350px;
+  line-height: 1.5;
+}
+
+.info-container h1 {
+  font-size: 42px;
+  font-weight: 600;
+}
+
+.info-container p {
+  color: var(--color-gray);
+}
+
+.mobile {
+  display: none;
+}
+
 .form {
+  display: flex;
+  flex-wrap: wrap;
   background-color: var(--color-white);
-  margin: 5% auto 15%;
-  border-radius: 8px;
-  padding: 20px 30px;
+  margin: 0 auto;
+  border-radius: 12px;
+  padding: 30px;
   box-shadow: 0 4px 50px rgba(4, 8, 19, 0.1);
-  /* width: 80%;
-  max-width: 600px;
-  min-width: 300px; */
+  gap: 20px;
+  line-height: 1.5;
 }
 
 .input-group {
+  flex: 1;
+  flex-basis: calc(50% - 20px);
   display: flex;
   flex-direction: column;
 }
 
+.input-group.no-wrap {
+  flex-basis: 100%;
+}
+
 .input-group label {
-  margin: 15px 0 5px;
   font-weight: 600;
-  font-size: 14px;
 }
 
 .input-group input,
@@ -73,15 +96,28 @@ body {
   padding: 10px;
   border: 1px solid var(--color-border);
   border-radius: 4px;
+  height: 40px;
   outline: none;
 }
 
 input::placeholder {
-  color: #737373;
+  color: var(--color-gray);
 }
 
-button {
+.input-group input:hover,
+.input-group select:hover {
+  border-color: var(--color-green);
+}
+
+.input-group input:focus,
+.input-group select:focus {
+  border-color: var(--color-green);
+  outline: 1px solid var(--color-green);
+}
+
+.form button {
   width: 100%;
+  height: 40px;
   padding: 10px;
   background-color: var(--color-green);
   border: none;
@@ -89,22 +125,57 @@ button {
   color: var(--color-white);
 }
 
+.form button:hover {
+  box-shadow: 0 4px 50px rgba(4, 8, 19, 0.1);
+  cursor: pointer;
+}
+
+.form p {
+  margin: auto;
+  text-align: center;
+}
+
+.form a {
+  color: var(--color-green);
+}
+
 /* Media Queries */
 @media screen and (max-width: 768px) {
   .container {
     flex-direction: column;
-    gap: 0;
+    margin-top: 20px;
+    padding: 10px;
   }
   .logo-img {
     max-width: 40px;
   }
-  /* 
-  .inner-container {
-    margin: 0 auto;
-  } */
+  .desktop {
+    display: none;
+  }
+  .mobile {
+    display: block;
+  }
+  .info-container {
+    max-width: 100%;
+    line-height: normal;
+  }
+  .info-container h1 {
+    font-size: 32px;
+  }
+
+  .input-group {
+    flex-basis: 100%;
+  }
 
   .form {
     width: 100%;
-    margin-top: 10%;
+    margin-top: 5%;
+    padding: 20px 10px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .info-container h1 {
+    font-size: 28px;
   }
 }
