--- a/signup-page/style.css
+++ b/signup-page/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;500;600&display=swap');
 
 :root {
-  --font-size-normal: 16px;
+  --font-size-normal: 18px;
 
   /* Colours */
   --color-background: #f7fdfc;
@@ -21,12 +21,15 @@
 
 body {
   background-color: var(--color-background);
+  min-height: 100vh;
 }
 
 .container {
   display: flex;
   flex-direction: row;
   padding: 40px;
+  max-width: 1440px;
+  margin: auto;
 }
 
 .inner-container {
@@ -96,7 +99,7 @@ body {
   padding: 10px;
   border: 1px solid var(--color-border);
   border-radius: 4px;
-  height: 40px;
+  height: 45px;
   outline: none;
 }
 
@@ -117,7 +120,7 @@ input::placeholder {
 
 .form button {
   width: 100%;
-  height: 40px;
+  height: 45px;
   padding: 10px;
   background-color: var(--color-green);
   border: none;
@@ -126,7 +129,7 @@ input::placeholder {
 }
 
 .form button:hover {
-  box-shadow: 0 4px 50px rgba(4, 8, 19, 0.1);
+  opacity: 0.8;
   cursor: pointer;
 }
 
