--- a/wp-pusher/style.css
+++ b/wp-pusher/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,900;1,300;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400&display=swap');
 
 :root {
   --font-size-sm: 14px;
@@ -24,16 +24,38 @@
 * {
   box-sizing: border-box;
   font-family: 'Lato', sans-serif;
-  font-size: var(--font-size-base);
 }
 
 body {
   background-color: var(--color-background);
   min-height: 100vh;
+  font-weight: 400;
 }
 
 li {
   list-style: none;
+}
+
+.flex-center {
+  display: flex;
+  justify-content: center;
+  width: max-content;
+  align-items: center;
+}
+.flex-center svg {
+  margin-right: 10px;
+}
+.flex-center img {
+  object-fit: cover;
+  height: 40px;
+  margin-right: 10px;
+}
+
+.italics {
+  font-style: italic;
+}
+.bold {
+  font-weight: 400;
 }
 
 /* NAVBAR */
@@ -60,6 +82,7 @@ li {
   border-radius: 8px;
   padding: 10px 15px;
   border: 2px solid transparent;
+  transition: border 0.3s ease-in;
 }
 
 .nav-bar li:not(:first-child) {
@@ -117,6 +140,7 @@ form .input-group {
   flex: 1;
   flex-basis: calc(50% - 20px);
   flex-direction: column;
+  font-size: var(--font-size-sm);
 }
 
 form .input-group.no-wrap {
@@ -175,10 +199,40 @@ form a {
   color: var(--font-gray);
 }
 
+.form-footer-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  gap: 10px;
+  color: var(--font-gray);
+  font-size: var(--font-size-sm);
+}
+
 .details-container {
+  display: flex;
+  flex-direction: column;
   flex: 1;
+  /* gap: 20px; */
   background-color: var(--color-blue);
   color: var(--color-white);
+  font-size: var(--font-size-base);
+  font-weight: 300;
+}
+
+.details-container h2 {
+  font-weight: 700;
+}
+
+.details-container a {
+  color: white;
+}
+
+.pricing span {
+  font-size: 60px;
+  font-weight: 300;
+  letter-spacing: -4px;
+  line-height: 0.8;
 }
 
 /* FOOTER */
