--- a/wp-pusher/style.css
+++ b/wp-pusher/style.css
@@ -51,6 +51,10 @@ li {
   margin-right: 10px;
 }
 
+.px-40 {
+  padding: 0 40px;
+}
+
 .italics {
   font-style: italic;
 }
@@ -80,7 +84,8 @@ li {
 .nav-bar li {
   border-radius: 8px;
   padding: 10px 15px;
-  border: 2px solid transparent;
+  outline: 20x solid transparent;
+  /* border: 2px solid transparent; */
   transition: border 0.3s ease-in;
 }
 
@@ -90,8 +95,13 @@ li {
 
 .nav-bar li:hover {
   border: 2px solid var(--border-dark);
-  color: var(--color-white);
   cursor: pointer;
+}
+
+.selected {
+  border: 2px solid var(--border-dark);
+  color: red;
+  /* color: var(--color-white); */
 }
 
 .nav-bar a {
@@ -110,13 +120,15 @@ li {
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
 }
 
-.inner-container {
-  padding: 40px;
-}
-
 .checkout-container {
   flex: 2;
   background-color: var(--color-white);
+  padding: 40px 0;
+}
+
+.checkout-container h2 {
+  /* font-size: 30px; */
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 form {
@@ -142,7 +154,11 @@ form .input-group {
   font-size: var(--font-size-sm);
 }
 
-form .input-group.no-wrap {
+form .input-group label {
+  margin-bottom: 5px;
+}
+
+.no-wrap {
   flex-basis: 100%;
 }
 
@@ -168,13 +184,32 @@ form .input-group input:focus {
   outline: 1px solid var(--color-green);
 }
 
+.credit-card {
+  display: flex;
+  width: 100%;
+}
+
+/* .credit-card input:hover,
+.credit-card input:focus {
+  border: none !important;
+  outline: none !important;
+}
+
+.credit-card input:first-child {
+  flex: 8 !important;
+}
+.credit-card input:nth-child(n + 2) {
+  flex: 2 !important;
+} */
+
 form button {
   width: 100%;
   height: 50px;
   padding: 10px;
   background-color: var(--color-green);
+  border-radius: 4px;
   border: none;
-  margin: 20px 0;
+  margin: 20px 40px;
   color: var(--color-white);
 }
 
@@ -198,6 +233,22 @@ form a {
   color: var(--font-gray);
 }
 
+.checkout-container .ruler {
+  margin-top: 20px;
+  margin-bottom: 10px;
+  width: 100%;
+  height: 1px;
+  background-color: var(--border-light);
+}
+
+.details-container .ruler {
+  margin-top: 40px;
+  margin-bottom: 20px;
+  width: 100%;
+  height: 1px;
+  background-color: var(--border-light);
+}
+
 .form-footer-info {
   display: flex;
   flex-direction: column;
@@ -216,21 +267,24 @@ form a {
   color: var(--color-white);
   font-size: var(--font-size-base);
   font-weight: 300;
-}
-
-.details-container h2 {
-  font-weight: 700;
+  padding: 40px;
+  gap: 20px;
 }
 
 .details-container a {
   color: white;
 }
 
-.pricing span {
+.pricing .price {
   font-size: 60px;
   font-weight: 300;
+  margin-left: 10px;
   letter-spacing: -4px;
   line-height: 0.8;
+}
+
+.pricing .superscript {
+  position: absolute;
 }
 
 /* FOOTER */
@@ -252,7 +306,7 @@ footer a {
   }
 
   .nav-bar ul {
-    flex-direction: column;
+    display: none;
   }
 }
 
