--- a/wp-pusher/style.css
+++ b/wp-pusher/style.css
@@ -36,6 +36,18 @@ li {
   list-style: none;
 }
 
+.flex {
+  display: flex;
+}
+
+.space-between {
+  justify-content: space-between;
+}
+
+.gap-10 {
+  gap: 10px;
+}
+
 .flex-center {
   display: flex;
   justify-content: center;
@@ -50,9 +62,16 @@ li {
   height: 40px;
   margin-right: 10px;
 }
+.w-100 {
+  width: 100%;
+}
 
 .px-40 {
   padding: 0 40px;
+}
+
+.my-20 {
+  margin: 20px 0;
 }
 
 .italics {
@@ -85,7 +104,6 @@ li {
   border-radius: 8px;
   padding: 10px 15px;
   outline: 20x solid transparent;
-  /* border: 2px solid transparent; */
   transition: border 0.3s ease-in;
 }
 
@@ -93,15 +111,9 @@ li {
   margin-left: 5px;
 }
 
-.nav-bar li:hover {
-  border: 2px solid var(--border-dark);
-  cursor: pointer;
-}
-
 .selected {
   border: 2px solid var(--border-dark);
   color: red;
-  /* color: var(--color-white); */
 }
 
 .nav-bar a {
@@ -113,7 +125,7 @@ li {
 /* MAIN */
 .container {
   display: flex;
-  max-width: 850px;
+  max-width: 900px;
   margin: 50px auto 20px;
   border-radius: 8px;
   overflow: hidden;
@@ -134,7 +146,6 @@ li {
 form {
   display: flex;
   flex-wrap: wrap;
-  gap: 20px;
 }
 
 form .sub-heading {
@@ -142,11 +153,10 @@ form .sub-heading {
   flex-basis: 100%;
   flex-direction: row;
   align-items: center;
-  gap: 10px;
   color: var(--font-dark);
 }
 
-form .input-group {
+.input-group {
   display: flex;
   flex: 1;
   flex-basis: calc(50% - 20px);
@@ -207,6 +217,7 @@ form button {
   height: 50px;
   padding: 10px;
   background-color: var(--color-green);
+  font-weight: 600;
   border-radius: 4px;
   border: none;
   margin: 20px 40px;
@@ -233,17 +244,9 @@ form a {
   color: var(--font-gray);
 }
 
-.checkout-container .ruler {
+.ruler {
   margin-top: 20px;
   margin-bottom: 10px;
-  width: 100%;
-  height: 1px;
-  background-color: var(--border-light);
-}
-
-.details-container .ruler {
-  margin-top: 40px;
-  margin-bottom: 20px;
   width: 100%;
   height: 1px;
   background-color: var(--border-light);
@@ -254,6 +257,8 @@ form a {
   flex-direction: column;
   align-items: center;
   width: 100%;
+  margin: auto;
+  margin-top: 10px;
   gap: 10px;
   color: var(--font-gray);
   font-size: var(--font-size-sm);
@@ -268,7 +273,6 @@ form a {
   font-size: var(--font-size-base);
   font-weight: 300;
   padding: 40px;
-  gap: 20px;
 }
 
 .details-container a {
