--- a/wp-pusher/style.css
+++ b/wp-pusher/style.css
@@ -100,6 +100,7 @@ li {
 /* NAVBAR */
 .nav-bar {
   border-bottom: 2px solid var(--border-light);
+  padding: 0 10px;
 }
 
 .nav-bar .logo-img {
@@ -119,6 +120,7 @@ li {
 
 .selected {
   border: 2px solid var(--border-dark);
+  margin-right: 10px;
 }
 
 .nav-bar a {
